# rusty-weather

./: Cargo.toml  Dockerfile_dod  Dockerfile_ob  README.md  index.html  zadanie1_dod.md  zadanie1_ob.md
.github/workflows/: docker-publish.yml
src/: main.rs
