# Metadane
[package]
name = "rusty-weather"
version = "0.1.0"
edition = "2021"

# Dodatkowe biblioteki
[dependencies]
# Webowy framework który umożliwia nasłuchiwanie na porcie
axum = "0.7"
# Asynchroniczny silnik
tokio = { version = "1.0", features = ["full"] }
# Biblioteki do serializacji i deserializacji JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Biblioteka do wykonywania żądań HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# Biblioteka do obsługi czasu i daty
chrono = "0.4"

# Flagi do kompilacji w trybie release
[profile.release]
opt-level = "z"     # Optymalizacja skompilowanego pliku binarnego względem rozmiaru
lto = true          # Link Time Optimization
codegen-units = 1   # Wolniejsza kompilacja, ale skutkuje mniejszym plikiem binarnym
panic = "abort"     # Usunięcie mechanizmu rozwijania stosu
strip = true        # Usunięcie symboli debugowania